--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,8 @@ output:
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public](http://www.repostatus.org/badges/latest/wip.svg)(http://www.repostatus.org/#wip)
+[![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.]
+(http://www.repostatus.org/badges/latest/wip.svg)](http://www.repostatus.org/#wip)
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
